Drop support for PHP 7

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "description": "Monofony core.",
     "license": "MIT",
     "require": {
-        "php": ">=7.4 || ^8.0"
+        "php": "^8.0"
     },
     "require-dev": {
         "phpstan/phpstan": "^0.12"
